--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This is a simple jquery plugin to render a radar animation on a canvas element.
+
+See http://mtibben.github.com/jquery.radar/example.html for an example.
